[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/game_objects/piece/Piece.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game_objects/pieces/z_piece/Z_Piece.gd" type="Script" id=2]

[node name="Z_Piece" instance=ExtResource( 1 )]
script = ExtResource( 2 )
_colour = Color( 0.666667, 0.0588235, 0.0588235, 1 )

[node name="BlockA" parent="." index="0"]
position = Vector2( -45, -45 )

[node name="BlockB" parent="." index="1"]
position = Vector2( -15, -45 )

[node name="BlockC" parent="." index="2"]
position = Vector2( -15, -15 )

[node name="BlockD" parent="." index="3"]
position = Vector2( 15, -15 )
